--- a/.github/workflows/yahoo_categories_rss.yml
+++ b/.github/workflows/yahoo_categories_rss.yml
@@ -1,4 +1,4 @@
-name: Fetch Yahoo News categories　RSS Feed
+name: Fetch Yahoo News categories RSS Feed
 
 on:
   schedule:
@@ -11,33 +11,34 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v2
 
-      - name: Fetch Yahoo News categories　RSS feeds
+      - name: Set up working directory
+        run: |
+          mkdir -p xml-categories
+          cd xml-categories
+
+      - name: Fetch Yahoo News categories RSS feeds
         run: |
           current_time=$(date +'%Y%m%d_%H%M')
-          mkdir -p xml-categories
           sleep 3
-          curl -o "xml-categories/domestic_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/domestic.xml
+          curl -o "domestic_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/domestic.xml
           sleep 3
-          curl -o "xml-categories/world_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/world.xml
+          curl -o "world_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/world.xml
           sleep 3
-          curl -o "xml-categories/business_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/business.xml
+          curl -o "business_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/business.xml
           sleep 3
-          curl -o "xml-categories/entertainment_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/entertainment.xml
+          curl -o "entertainment_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/entertainment.xml
           sleep 3
-          curl -o "xml-categories/sports_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/sports.xml
+          curl -o "sports_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/sports.xml
           sleep 3
-          curl -o "xml-categories/it_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/it.xml
+          curl -o "it_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/it.xml
           sleep 3
-          curl -o "xml-categories/science_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/science.xml
+          curl -o "science_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/science.xml
           sleep 3
-          curl -o "xml-categories/life_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/life.xml
+          curl -o "life_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/life.xml
           sleep 3
-          curl -o "xml-categories/local_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/local.xml
+          curl -o "local_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/local.xml
 
       - name: Commit and push XML files
         run: |
           git config user.name "Automated"
-          git config user.email "actions@users.noreply.github.com"
-          git add xml-categories/
-          git commit -m "Update XML files"
-          git push
+          git
