--- a/.github/workflows/yahoo_categories_rss.yml
+++ b/.github/workflows/yahoo_categories_rss.yml
@@ -2,7 +2,7 @@ name: Fetch Yahoo News categories RSS Feed
 
 on:
   schedule:
-    - cron: '0 */2 * * *'  # Run every 2 hours
+    - cron: '0 */1 * * *'  # Run every 1 hour
 
 jobs:
   fetch-rss:
