--- a/.github/workflows/Yahoo_categories_RSS .yml
+++ b/.github/workflows/Yahoo_categories_RSS .yml
@@ -1,35 +1,19 @@
-name: Fetch Yahoo News categories RSS Feed
-
-on:
-  schedule:
-    - cron: '0 */1 * * *'  # Run every 1 hour
-
-jobs:
-  fetch-rss:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repo
-        uses: actions/checkout@v2
-
-      - name: Create xml-categories directory
-        run: mkdir -p xml-categories
-
-      - name: Fetch Yahoo News categories RSS feeds
-        run: |
-          current_time=$(date +'%Y%m%d_%H%M')
-          sleep 3
-          curl -o "xml-categories/domestic_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/domestic.xml
-          sleep 3
-          curl -o "xml-categories/world_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/world.xml
-          sleep 3
-          curl -o "xml-categories/business_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/business.xml
-          sleep 3
-          curl -o "xml-categories/entertainment_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/entertainment.xml
-          sleep 3
-          curl -o "xml-categories/sports_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/sports.xml
-          sleep 3
-          curl -o "xml-categories/it_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/it.xml
-          sleep 3
-          curl -o "xml-categories/science_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/science.xml
-          sleep 3
-          curl -o "xml-categories/life_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/life.xml
+- name: Fetch Yahoo News categories RSS feeds
+  run: |
+    current_time=$(date +'%Y%m%d_%H%M')
+    sleep 3s
+    curl -o "xml-categories/domestic_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/domestic.xml
+    sleep 3s
+    curl -o "xml-categories/world_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/world.xml
+    sleep 3s
+    curl -o "xml-categories/business_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/business.xml
+    sleep 3s
+    curl -o "xml-categories/entertainment_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/entertainment.xml
+    sleep 3s
+    curl -o "xml-categories/sports_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/sports.xml
+    sleep 3s
+    curl -o "xml-categories/it_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/it.xml
+    sleep 3s
+    curl -o "xml-categories/science_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/science.xml
+    sleep 3s
+    curl -o "xml-categories/life_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/life.xml
