--- a/.github/workflows/Yahoo_categories_RSS .yml
+++ b/.github/workflows/Yahoo_categories_RSS .yml
@@ -9,53 +9,55 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Create xml-categories folder
-        run: mkdir xml-categories
+      - name: Set up directories
+        run: |
+          mkdir -p xml-categories
+          echo "::set-output name=dir::$(pwd)/xml-categories"
 
       - name: Fetch domestic category RSS feed
         run: |
           current_time=$(date +'%Y%m%d_%H%M')
           sleep 3s
-          curl -o "xml-categories/domestic_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/domestic.xml
+          curl -o "${{ steps.setup.outputs.dir }}/domestic_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/domestic.xml
 
       - name: Fetch world category RSS feed
         run: |
           current_time=$(date +'%Y%m%d_%H%M')
           sleep 3s
-          curl -o "xml-categories/world_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/world.xml
+          curl -o "${{ steps.setup.outputs.dir }}/world_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/world.xml
 
       - name: Fetch business category RSS feed
         run: |
           current_time=$(date +'%Y%m%d_%H%M')
           sleep 3s
-          curl -o "xml-categories/business_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/business.xml
+          curl -o "${{ steps.setup.outputs.dir }}/business_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/business.xml
 
       - name: Fetch entertainment category RSS feed
         run: |
           current_time=$(date +'%Y%m%d_%H%M')
           sleep 3s
-          curl -o "xml-categories/entertainment_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/entertainment.xml
+          curl -o "${{ steps.setup.outputs.dir }}/entertainment_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/entertainment.xml
 
       - name: Fetch sports category RSS feed
         run: |
           current_time=$(date +'%Y%m%d_%H%M')
           sleep 3s
-          curl -o "xml-categories/sports_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/sports.xml
+          curl -o "${{ steps.setup.outputs.dir }}/sports_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/sports.xml
 
       - name: Fetch IT category RSS feed
         run: |
           current_time=$(date +'%Y%m%d_%H%M')
           sleep 3s
-          curl -o "xml-categories/it_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/it.xml
+          curl -o "${{ steps.setup.outputs.dir }}/it_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/it.xml
 
       - name: Fetch science category RSS feed
         run: |
           current_time=$(date +'%Y%m%d_%H%M')
           sleep 3s
-          curl -o "xml-categories/science_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/science.xml
+          curl -o "${{ steps.setup.outputs.dir }}/science_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/science.xml
 
       - name: Fetch life category RSS feed
         run: |
           current_time=$(date +'%Y%m%d_%H%M')
           sleep 3s
-          curl -o "xml-categories/life_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/life.xml
+          curl -o "${{ steps.setup.outputs.dir }}/life_${current_time}_$(date +'%H%M').xml" https://news.yahoo.co.jp/rss/categories/life.xml
