fix variable name of output dir

--- a/.github/workflows/Yahoo_categories_RSS.yml
+++ b/.github/workflows/Yahoo_categories_RSS.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Set up directories
         run: |
           mkdir -p xml-categories
-          echo "dir=$(pwd)/xml-categories" >> $GITHUB_OUTPUT
+          echo "dir=$(pwd)/xml-categories" >> "$GITHUB_OUTPUT"
         id: setup
 
       - name: Fetch domestic category RSS feed
